Manifests/networkpolicynamespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-springboot-application
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: test
    ports:
    - protocol: TCP
      port: 27017

#kubectl lable ns test project=test
